# nudge

./: LICENSE  README.md  pyproject.toml
nudge/: __init__.py  backend_mlx.py  cli.py  collect.py  db.py  feedback.py  models.py  trainer.py
nudge/hooks/: _common.py  claude_code.py  codex.py  irc.py  openclaw.py  teams.py
openclaw-plugin/: openclaw.plugin.json  package.json
openclaw-plugin/src/: index.ts
reinforceclaw/: __init__.py  backend_cuda.py  backend_mlx.py  cli.py  db.py  feedback.py  models.py  presets.py  profile.py  scheduler.py  trainer.py
reinforceclaw/hooks/: _common.py  claude_code.py  codex.py  openclaw.py
reinforceclaw/openclaw_plugin/: README.md  openclaw.plugin.json  package.json
reinforceclaw/openclaw_plugin/src/: index.ts
tests/: test_collect.py  test_control_plane.py  test_core.py  test_db.py  test_hardening.py  test_lora.py  test_smoke.py  test_train_minimal.py  test_training.py
