[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforceclaw"
version = "0.1.0"
description = "Personal RL feedback system — rate AI responses, train local LoRA adapters"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.30.0",
    "mlx-lm>=0.30.0",
    "safetensors>=0.4",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
integrations = [
    "discord.py>=2.4",
    "slack-bolt>=1.20",
    "botbuilder-core>=4.17",
    "botbuilder-schema>=4.17",
    "python-telegram-bot>=21.0",
]

[project.scripts]
reinforceclaw = "reinforceclaw.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
